# Swagger/swagger.json
@@ -1,8 +1,8 @@
 {
   "openapi" : "3.0.1",
   "info" : {
-    "title" : "Band API",
-    "description" : "API of Bands",
+    "title" : "Track API",
+    "description" : "API of Tracks",
     "version" : "1.0"
   },
   "servers" : [ {
@@ -13,8 +13,8 @@
   "paths" : {
     "/Tracks" : {
       "get" : {
-        "tags" : [ "Bands" ],
-        "summary" : "Liste aller Bands",
+        "tags" : [ "Tracks" ],
+        "summary" : "Liste aller Tracks",
         "operationId" : "getTracks",
         "responses" : {
           "200" : {
@@ -33,8 +33,8 @@
         }
       },
       "post" : {
-        "tags" : [ "Bands" ],
-        "summary" : "Legt eine Band an",
+        "tags" : [ "Tracks" ],
+        "summary" : "Legt einen Track an",
         "operationId" : "createTrack",
         "requestBody" : {
           "content" : {
@@ -56,6 +56,37 @@
                 "example" : "Created track: Rammstein, Engel"
               }
             }
+          }
+        }
+      }
+    },
+    "/Tracks/{trackid}" : {
+      "put" : {
+        "tags" : [ "Tracks" ],
+        "summary" : "Ändert einen Track",
+        "operationId" : "changeTrack",
+        "parameters" : [ {
+          "name" : "trackid",
+          "in" : "path",
+          "description" : "ID des Tracks",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/TrackItem"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK"
           }
         }
       }
